# krunner-vscodeprojects

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  install-user.sh  install.sh  postinst  uninstall.sh
src/: CMakeLists.txt  plasma-runner-vscodeprojectsrunner.desktop  utilities.h  vscodeprojectsrunner.cpp  vscodeprojectsrunner.h  vscodeprojectsrunner.json  vscodeprojectsrunner.json.in
src/config/: plasma-runner-vscodeprojectsrunner_config.desktop  vscodeprojectsrunner_config.cpp  vscodeprojectsrunner_config.h  vscodeprojectsrunner_config.ui
